# ToScaNA-GUI

./: README.md  requirements.txt  run.sh  setup.sh
src/: pyproject.toml
src/ntsa/: __init__.py
src/ntsa/calibration/: __init__.py  d4nifit.py
src/ntsa/chemistry/: __init__.py  composition.py
src/ntsa/data/: __init__.py  xy.py
src/ntsa/experiment/: __init__.py  info.py  measurement.py
src/ntsa/io/: __init__.py  _logfiles.py  acquisition.py  correct.py  corrections.py  d4creg_outputs.py  loading.py  numors.py  parameters.py  running_params.py  saving.py
src/ntsa/isotopes/: __init__.py  core.py  database.py
src/ntsa/math/: __init__.py  binning.py  fitting.py  fourier.py  line_shapes.py  operations.py  peak_finding.py  polynomials.py  signal_processing.py  windows.py
src/ntsa/models/: __init__.py  cross_sections.py  ni.py  scattering.py
src/ntsa/physics/: __init__.py  conversions.py  crystallography.py  geometry.py  properties.py
src/ntsa/plotting/: __init__.py  basic.py  workflows.py
src/ntsa/utils/: __init__.py  commands.py  dates.py  dicts.py  interactive.py
src/ntsa/workflows/: __init__.py  d4creg.py
toscana_gui/: shell.py
toscana_gui/app/: shell.py
toscana_gui/background/: controller.py  plots.py  tasks.py
toscana_gui/numors/: controller.py  run_blocks.py
toscana_gui/persistence/: state.py
toscana_gui/projects/: controller.py
toscana_gui/ui/: callbacks.py  runtime.py  theme.py  views.py  widgets.py
toscana_gui/ui/screens/: background.py  numors.py  run_history.py  workspace.py
