[project]
name = "ntsa"
version = "0.1.0"
description = "Neutron Total Scattering Analysis (refactoring workspace)"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "h5py",
  "lmfit",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "ruff",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88

extend-exclude = [
  "legacy",
  "Conversation Logs",
  "Planning",
  "Task Tracker",
  "tests/visuals/plots",
  "helper",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
